feat: swig init
