# router/app.go
@@ -13,5 +13,6 @@ func Router() *gin.Engine {
 	r.POST("/user/createUser", service.CreateUser)
 	r.GET("/user/deleteUser", service.DeleteUser)
 	r.POST("user/updateUser", service.UpdateUser)
+	r.POST("user/checkUserByNameAndPwd", service.CheckUserByNameAndPwd)
 	return r
 }
